--- a/src/main/resources/templates/editarEvento.html
+++ b/src/main/resources/templates/editarEvento.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MyEvents - Inicio</title>
+  <title>MyEvents - Usuarios</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -27,10 +27,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/" class="nav-link">Inicio</a>
+        <a href="/menu" class="nav-link">Inicio</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/login" class="nav-link">Login</a>
+        <a href="/usuarios" class="nav-link">Usuarios</a>
+      </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="/eventos" class="nav-link">Eventos</a>
       </li>
     </ul>
 
@@ -49,7 +52,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
+    <a href="/menu" class="brand-link">
       <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">MyEvents</span>
     </a>
@@ -71,13 +74,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="/" class="nav-link">
+                <a href="/menu" class="nav-link">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Inicio</p>
                 </a>
-                <a href="/login" class="nav-link">
-	              <i class="nav-icon fas fa-user"></i>
-	              <p>Login</p>
+            	<a href="/usuarios" class="nav-link">
+	              <i class="nav-icon fas fa-user-friends"></i>
+	              <p>Usuarios</p>
+            	</a>
+            	<a href="/eventos" class="nav-link">
+	              <i class="nav-icon fas fa-calendar-week"></i>
+	              <p>Eventos</p>
+            	</a>
+            	 <a href="/cerrarSesion" class="nav-link">
+	              <i class="nav-icon fas fa-user-alt-slash"></i>
+	              <p>Cerrar Sesion</p>
             	</a>
               </li>
             </ul>
@@ -96,7 +107,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">Inicio</h1>
+            <h1 class="m-0">Editar Evento</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
           </div><!-- /.col -->
@@ -109,17 +120,52 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <div class="content">
       <div class="container-fluid">
 
-            <div class="card card-primary card-outline">
-              <div class="card-body">
-                <h5 class="card-title">MyEvents Admin</h5>
+                <section class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- left column -->
+          <div class="col-md-12">
+            <!-- jquery validation -->
+            <div class="card card-primary">
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form id="formEditarEvento" method="post" action="/eventos">
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="dato1">dato1</label>
+                    <input type="text" name="dato1" class="form-control" id="dato1" placeholder="dato1">
+                  </div>
+                  <div class="form-group">
+                    <label for="dato2">dato2</label>
+                    <input type="text" name="dato2" class="form-control" id="dato2" placeholder="dato2">
+                  </div>
+                  <div class="form-group">
+                    <label for="dato3">dato3</label>
+                    <input type="text" name="dato3" class="form-control" id="dato3" placeholder="dato3">
+                  </div>
+                  <div class="form-group">
+                    <label for="dato4">dato4</label>
+                    <input type="text" name="dato4" class="form-control" id="dato4" placeholder="dato4">
+                  </div>
+                </div>
+                <!-- /.card-body -->
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary">Editar Evento</button>
+                </div>
+              </form>
+            </div>
+            <!-- /.card -->
+            </div>
+          <!--/.col (left) -->
+          <!-- right column -->
+          <div class="col-md-6">
 
-                <p class="card-text">
-                  En esta app podrás administrar los datos de los usuarios y sus eventos
-                </p>		
-              </div>
-            </div><!-- /.card -->
           </div>
-          <!-- /.col-md-6 -->
+          <!--/.col (right) -->
+        </div>
+        <!-- /.row -->
+      </div><!-- /.container-fluid -->
+    </section>
       </div><!-- /.container-fluid -->
     </div>
     <!-- /.content -->
@@ -130,10 +176,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <footer class="main-footer">
     <!-- To the right -->
     <div class="float-right d-none d-sm-inline">
-      MyEvents
+      App Eventos
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2021 <a href="#">admin.MyEvents.com</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2021 <a href="#">adminEventos.com</a>.</strong> All rights reserved.
   </footer>
 </div>
 <!-- ./wrapper -->
@@ -141,10 +187,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- REQUIRED SCRIPTS -->
 
 <!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
+<script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jquery-validation -->
+<script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="../../plugins/jquery-validation/additional-methods.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/dist/js/adminlte.min.js"></script>
+<script src="../../dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="../../dist/js/demo.js"></script>
+<!-- Page specific script -->
 </body>
 </html>
+
