--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -123,12 +123,44 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="card card-primary card-outline">
               <div class="card-body">
                 <h5 class="card-title">MyEvents Admin</h5>
-
                 <p class="card-text">
                   En esta app podrás administrar los datos de los usuarios y sus eventos
                 </p>		
               </div>
             </div><!-- /.card -->
+
+			<div class="small-box bg-warning">
+              <div class="inner">
+                <h3>44</h3>
+
+                <p>Usuarios Registrados</p>
+              </div>
+              <div class="icon">
+                <i class="fas fa-user-plus"></i>
+              </div>
+              <a href="/usuarios" class="small-box-footer">
+                Ir a Usuarios <i class="fas fa-arrow-circle-right"></i>
+              </a>
+            </div>
+          </div>
+          
+          <div class="small-box bg-info">
+              <div class="inner">
+                <h3>21</h3>
+
+                <p>Eventos Creados</p>
+              </div>
+              <div class="icon">
+                <i class="fas fa-calendar-week"></i>
+              </div>
+              <a href="/eventos" class="small-box-footer">
+                Ir a eventos <i class="fas fa-arrow-circle-right"></i>
+              </a>
+            </div>
+          </div>
+
+
+
           </div>
           <!-- /.col-md-6 -->
       </div><!-- /.container-fluid -->
