Update: Refactor Controladores

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -121,7 +121,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form id="login">
+              <form id="login" method="post" action="/resolveLogin">
                 <div class="card-body">
                   <div class="form-group">
                     <label for="user">Usuario</label>
